Bug #35986
abort_bucket_multiparts() fails on missing multipart meta objects
% Done:
0%
Source:
Tags:
Backport:
mimic luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
If there are multipart meta objects listed in the bucket index that don't exist in the data_extra_pool, the ENOENT/ERR_NO_SUCH_UPLOAD error is treated as fatal and returned by abort_bucket_multiparts(). This prevents the bucket from being removed.
Related issues
History
#1 Updated by Casey Bodley over 4 years ago
- Status changed from 12 to Fix Under Review
#2 Updated by Casey Bodley over 4 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #36128: luminous: abort_bucket_multiparts() fails on missing multipart meta objects added
#4 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #36129: mimic: abort_bucket_multiparts() fails on missing multipart meta objects added
#5 Updated by Nathan Cutler over 4 years ago
- Status changed from Pending Backport to Resolved